cs-apps/homer/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cs-homer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("connor-science.duckdns.org")
      kind: Rule
      services:
        - name: cs-homer
          port: 8080
